src/snapshots/alma__tokenizer__tests__tokenize_single_line_comment.snap
---
source: src/tokenizer.rs
assertion_line: 462
expression: "tokenize(\"123\\n--Banana\\n321\")"
---
Ok(
    [
        Token {
            kind: Float(
                SymbolU32 {
                    value: 1,
                },
            ),
            indent: 0,
            start: 0,
            end: 3,
            line: 1,
            column: 0,
        },
        Token {
            kind: Comment,
            indent: 0,
            start: 4,
            end: 12,
            line: 2,
            column: 0,
        },
        Token {
            kind: Float(
                SymbolU32 {
                    value: 2,
                },
            ),
            indent: 0,
            start: 13,
            end: 16,
            line: 3,
            column: 0,
        },
        Token {
            kind: Eof,
            indent: 0,
            start: 16,
            end: 16,
            line: 3,
            column: 3,
        },
    ],
)
