src/snapshots/alma__tokenizer__tests__tokenize_string.snap
---
source: src/tokenizer.rs
assertion_line: 457
expression: "tokenize(r#\"\"asdf\\\"asdf\"\"#)"
---
Ok(
    [
        Token {
            kind: String_(
                SymbolU32 {
                    value: 1,
                },
            ),
            indent: 0,
            start: 0,
            end: 12,
            line: 1,
            column: 0,
        },
        Token {
            kind: Eof,
            indent: 0,
            start: 12,
            end: 12,
            line: 1,
            column: 12,
        },
    ],
)
