src/snapshots/alma__tokenizer__tests__tokenize_whitespace_number_or_string.snap
---
source: src/tokenizer.rs
assertion_line: 447
expression: "tokenize(\"123\\n or \\\"abc\\\"\")"
---
Ok(
    [
        Token {
            kind: Float(
                SymbolU32 {
                    value: 1,
                },
            ),
            indent: 0,
            start: 0,
            end: 3,
            line: 1,
            column: 0,
        },
        Token {
            kind: Or,
            indent: 1,
            start: 5,
            end: 7,
            line: 2,
            column: 1,
        },
        Token {
            kind: String_(
                SymbolU32 {
                    value: 2,
                },
            ),
            indent: 1,
            start: 8,
            end: 13,
            line: 2,
            column: 4,
        },
        Token {
            kind: Eof,
            indent: 1,
            start: 13,
            end: 13,
            line: 2,
            column: 9,
        },
    ],
)
